// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test CheckPnP should render correctly 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 0px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="scrollable react-draggable"
              style="min-width: min(80vw, 95vw); transform: translate(0px, 0px)translate(0px,0px);"
            >
              <div
                class="ant-modal-content"
              >
                <button
                  aria-label="Close"
                  class="ant-modal-close"
                  type="button"
                >
                  <span
                    class="ant-modal-close-x"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close ant-modal-close-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        fill-rule="evenodd"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="ant-modal-header"
                >
                  <div
                    class="ant-modal-title"
                    id="test-id"
                  >
                    <div
                      style="cursor: move; width: 100%;"
                    >
                      Confirm Calibration Result
                    </div>
                  </div>
                </div>
                <div
                  class="ant-modal-body"
                >
                  <div
                    class="ant-row css-dev-only-do-not-override-hash"
                    style="row-gap: 12px;"
                  >
                    <div
                      class="ant-col ant-col-24 desc css-dev-only-do-not-override-hash"
                    >
                      Make sure the red markers align with the engraving spots; if not, click “Back” to adjust.
                    </div>
                    <div
                      class="ant-col ant-col-24 css-dev-only-do-not-override-hash"
                    >
                      <div>
                        MockImageDisplay
                        <p>
                          img: 
                        </p>
                        <g
                          class="group"
                        >
                          <circle
                            cx="0"
                            cy="0"
                            r="5"
                          />
                          <circle
                            class="center"
                            cx="0"
                            cy="0"
                            r="1"
                          />
                          <circle
                            cx="5"
                            cy="5"
                            r="5"
                          />
                          <circle
                            class="center"
                            cx="5"
                            cy="5"
                            r="1"
                          />
                        </g>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-24 css-dev-only-do-not-override-hash"
                    >
                      <div>
                        MockExposureSlider
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-modal-footer"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                    type="button"
                  >
                    <span>
                      Back
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                    type="button"
                  >
                    <span>
                      Done
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test CheckPnP should render correctly 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 0px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="scrollable react-draggable"
              style="min-width: min(80vw, 95vw); transform: translate(0px, 0px)translate(0px,0px);"
            >
              <div
                class="ant-modal-content"
              >
                <button
                  aria-label="Close"
                  class="ant-modal-close"
                  type="button"
                >
                  <span
                    class="ant-modal-close-x"
                  >
                    <span
                      aria-label="close"
                      class="anticon anticon-close ant-modal-close-icon"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close"
                        fill="currentColor"
                        fill-rule="evenodd"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
                <div
                  class="ant-modal-header"
                >
                  <div
                    class="ant-modal-title"
                    id="test-id"
                  >
                    <div
                      style="cursor: move; width: 100%;"
                    >
                      Confirm Calibration Result
                    </div>
                  </div>
                </div>
                <div
                  class="ant-modal-body"
                >
                  <div
                    class="ant-row css-dev-only-do-not-override-hash"
                    style="row-gap: 12px;"
                  >
                    <div
                      class="ant-col ant-col-24 desc css-dev-only-do-not-override-hash"
                    >
                      Make sure the red markers align with the engraving spots; if not, click “Back” to adjust.
                    </div>
                    <div
                      class="ant-col ant-col-24 css-dev-only-do-not-override-hash"
                    >
                      <div>
                        MockImageDisplay
                        <p>
                          img: 
                          mock-url
                        </p>
                        <g
                          class="group"
                        >
                          <circle
                            cx="0"
                            cy="0"
                            r="5"
                          />
                          <circle
                            class="center"
                            cx="0"
                            cy="0"
                            r="1"
                          />
                          <circle
                            cx="5"
                            cy="5"
                            r="5"
                          />
                          <circle
                            class="center"
                            cx="5"
                            cy="5"
                            r="1"
                          />
                        </g>
                      </div>
                    </div>
                    <div
                      class="ant-col ant-col-24 css-dev-only-do-not-override-hash"
                    >
                      <div>
                        MockExposureSlider
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-modal-footer"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                    type="button"
                  >
                    <span>
                      Back
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                    type="button"
                  >
                    <span>
                      Done
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
